Fix headline text align center

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
 .headline {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   padding: 120px 0;
   gap: 12px;
   position: absolute;
